<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondodispositivo" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton"
        android:layout_width="136dp"
        android:layout_height="128dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/agregarplanta"
        android:onClick="IrAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton2"
        android:layout_width="133dp"
        android:layout_height="116dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:background="#A4B485"
        android:contentDescription="@string/listaplanta"
        android:onClick="IrListado"
        app:layout_constraintStart_toEndOf="@+id/imageFilterButton"
        app:layout_constraintTop_toBottomOf="@+id/divider_up"
        app:srcCompat="@drawable/img3" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton3"
        android:layout_width="123dp"
        android:layout_height="110dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="38dp"
        android:background="#A3B585"
        android:contentDescription="@string/config"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAgregarPlanta"
        app:srcCompat="@drawable/imagen3"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/menu_up"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTittle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MyPlantsTracker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menu_up"
        app:layout_constraintEnd_toEndOf="@+id/menu_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_up" />

    <View
        android:id="@+id/divider_up"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_up" />

    <TextView
        android:id="@+id/txtAgregarPlanta"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:text="Agregar Planta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton" />

    <TextView
        android:id="@+id/txtListaPlanta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="Lista Plantas"
        app:layout_constraintStart_toEndOf="@+id/txtAgregarPlanta"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton2" />

    <TextView
        android:id="@+id/txtConfiguracion"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="Configuración"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="IrLogin"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>